teacher dashboard redirects working

--- a/gp/src/main/resources/templates/users/teacher/teacher.html
+++ b/gp/src/main/resources/templates/users/teacher/teacher.html
@@ -111,12 +111,12 @@
         style="margin-top: 15px"
         th:text="'Welcome, Teacher ' + ${user.username}"
       ></h1>
-      <nav>
+      <!-- <nav>
         <ul>
           <li><a href="/teacher/courses">My Courses</a></li>
           <li><a href="/teacher/exams">My Exams</a></li>
         </ul>
-      </nav>
+      </nav> -->
 
       <h2>Teacher Dashboard</h2>
       <!-- <h1 th:text="${user.uid}"></h1> -->
