--- a/gp/src/main/resources/templates/users/admin/instructorRequests.html
+++ b/gp/src/main/resources/templates/users/admin/instructorRequests.html
@@ -14,7 +14,7 @@
         <table class="request-table table table-striped">
         <thead>
             <tr>
-            <!-- <th>Instructor</th> -->
+            <th>Instructor</th>
             <th>Course</th>
             <th>Duration</th>
             <th>Section</th>
@@ -24,14 +24,14 @@
             </tr>
         </thead>
         <tbody>
-            <tr th:each="request: ${requests}">
-                <!-- <td th:text="${request.username}"></td> -->
-                <td th:text="${request.course_name}"></td>
-                <td th:text="${request.duration}"></td>
-                <td th:text="${request.section}"></td>
-                <!-- <td th:text="${request.first_choice}"></td>
-                <td th:text="${request.second_choice}"></td>
-                <td th:text="${request.third_choice}"></td> -->
+            <tr th:each="teacher: ${teacherTable}">
+                <td th:text="${teacher.instructorUser}"></td>
+                <td th:text="${teacher.course_name}"></td>
+                <td th:text="${teacher.duration}"></td>
+                <td th:text="${teacher.section}"></td>
+                <td th:text="${teacher.first_choice}"></td>
+                <td th:text="${teacher.second_choice}"></td>
+                <td th:text="${teacher.third_choice}"></td>
             </tr>
         </tbody>
         </table>
