Manage User function for admin and ability to remove users

--- a/gp/src/main/resources/templates/users/teacher/teacher.html
+++ b/gp/src/main/resources/templates/users/teacher/teacher.html
@@ -224,7 +224,7 @@
         <thead>
           <tr>
             <th>Course</th>
-            <th>Duration</th>
+            <th>Duration (hours)</th>
             <th>Section</th>
             <th>First Choice</th>
             <th>Second Choice</th>
