--- a/gp/src/main/resources/templates/users/proctor/proctor.html
+++ b/gp/src/main/resources/templates/users/proctor/proctor.html
@@ -95,8 +95,7 @@
     <nav>
       <ul>
         <!-- Add relevant links for proctor dashboard -->
-        <li><a href="/proctor/non-available-dates">Specify Non-Available Dates</a></li>
-        <li><a href="/proctor/pending-assignments">Pending Assignments</a></li>
+        <li><a href="/proctor/pending-exams">Pending Assignments</a></li>
         <li><a href="/proctor/download-calendar">Download Calendar</a></li>
       </ul>
     </nav>
