--- a/gp/src/main/resources/templates/users/proctor/proctor.html
+++ b/gp/src/main/resources/templates/users/proctor/proctor.html
@@ -115,7 +115,9 @@
 
         <!-- Non-Available Dates Form -->
         <form class="non-available-dates-form" action="/proctor/non-available-dates" method="post">
-           <!-- <div class="form-group">
+           
+          <!--NEED TO ADD A OPTION FOR HALLMONITOR/ROOM INVIGILATOR ROLES INTO DATABASE-->
+          <!-- <div class="form-group">
              <label>Select Role:</label>
               <div class="form-check">
                   <input class="form-check-input" type="checkbox" id="hallMonitor" name="role" value="hallMonitor">
@@ -127,6 +129,7 @@
               </div>
           </div>-->
           <div class="form-group">
+            <!--NEED TO ADD PROCTOR ID TO KEEP TRACK OF PROCTORS-->
               <label for="nonAvailableDates">Select Non-Available Dates:</label>
               <input type="text" id="nonAvailableDates" name="nonAvailableDates" class="form-control" required>
           </div>
