--- a/gp/src/main/resources/templates/users/teacher/teacher.html
+++ b/gp/src/main/resources/templates/users/teacher/teacher.html
@@ -218,28 +218,29 @@
       <!-- Request Table -->
       <table class="table table-striped table-bordered">
         <thead class="table-dark">
-          <tr>
-            <th class="text-center">Course</th>
-            <th class="text-center">Duration</th>
-            <th class="text-center">Section</th>
-            <th class="text-center">First Choice</th>
-            <th class="text-center">Second Choice</th>
-            <th class="text-center">Third Choice</th>
-            <th class="text-center">Action</th>
+          <tr class="text-center">
+            <th>Course</th>
+            <th>Duration</th>
+            <th>Section</th>
+            <th>First Choice</th>
+            <th>Second Choice</th>
+            <th>Third Choice</th>
+            <th>Action</th>
           </tr>
         </thead>
         <tbody>
           <tr
             th:each="teacher: ${teacherTable}"
             th:if="${teacher.instructorUser} == ${user.username}"
+            class="text-center"
           >
-            <td class="text-center" th:text="${teacher.course_name}"></td>
-            <td class="text-center" th:text="${teacher.duration}"></td>
-            <td class="text-center" th:text="${teacher.section}"></td>
-            <td class="text-center" th:text="${teacher.first_choice}"></td>
-            <td class="text-center" th:text="${teacher.second_choice}"></td>
-            <td class="text-center" th:text="${teacher.third_choice}"></td>
-            <td class="text-center">
+            <td th:text="${teacher.course_name}"></td>
+            <td th:text="${teacher.duration}"></td>
+            <td th:text="${teacher.section}"></td>
+            <td th:text="${teacher.first_choice}"></td>
+            <td th:text="${teacher.second_choice}"></td>
+            <td th:text="${teacher.third_choice}"></td>
+            <td>
               <a th:href="@{/request/{uid}(uid=${teacher.uid})}" class="btn btn-primary actionButton">Edit</a>
               <a style="margin-top: 7px;" th:href="@{/request/delete/{uid}(uid=${teacher.uid})}" class="btn btn-danger actionButton">Delete</a>
             </td>
