add dashboard buttons for proctor and admin

--- a/gp/src/main/resources/templates/users/admin/adminUsers.html
+++ b/gp/src/main/resources/templates/users/admin/adminUsers.html
@@ -21,7 +21,15 @@
 </head>
 <body>
   <div class="container">
+
     <h1 style="text-align: center; margin: 20px;">Users</h1>
+
+    <div class="btn-toolbar">
+      <form action="/admin/dashboard" method="get">
+        <button type="submit" class="btn btn-primary" style="margin-bottom: 20px;">Admin Dashboard</button>
+      </form>
+    </div>
+
     <table class="table table-striped table-bordered">
       <thead class="table-dark">
         <tr class="text-center">
@@ -49,6 +57,7 @@
         </tr>
       </tbody>
     </table>
+
   </div>
 </body>
 </html>
