--- a/gp/src/main/resources/templates/users/admin/admin.html
+++ b/gp/src/main/resources/templates/users/admin/admin.html
@@ -29,6 +29,11 @@
         text-align: center;
         margin-bottom: 20px;
       }
+      .btn-toolbar {
+        display: flex;
+        justify-content: flex-end;
+        margin-bottom: 20px;
+      }
       nav ul {
         list-style: none;
         padding: 0;
