--- a/gp/src/main/resources/templates/users/admin/instructorRequests.html
+++ b/gp/src/main/resources/templates/users/admin/instructorRequests.html
@@ -8,7 +8,14 @@
 </head>
 <body>
     <div class="container">
+
         <h1 style="text-align: center; margin: 20px;">Exam Requests</h1>
+
+        <div class="btn-toolbar">
+            <form action="/admin/dashboard" method="get">
+              <button type="submit" class="btn btn-primary" style="margin-bottom: 20px;">Admin Dashboard</button>
+            </form>
+        </div>
 
         <!-- Request Table -->
         <table class="table table-striped table-bordered">
