--- a/gp/src/main/resources/templates/users/proctor/proctorNADates.html
+++ b/gp/src/main/resources/templates/users/proctor/proctorNADates.html
@@ -10,6 +10,12 @@
     <div class="container">
         <h1 style="text-align: center; margin: 20px;">Exam Requests</h1>
 
+        <div class="btn-toolbar">
+            <form action="/proctor/dashboard" method="get">
+              <button type="submit" class="btn btn-primary" style="margin-bottom: 20px;">Proctor Dashboard</button>
+            </form>
+        </div>
+
         <!-- Request Table -->
         <table class="request-table table table-striped">
         <thead>
