--- a/gp/src/main/resources/templates/users/proctor/proctor.html
+++ b/gp/src/main/resources/templates/users/proctor/proctor.html
@@ -142,6 +142,28 @@
     </form>
     
   </div>
+</div>
+    <!-- Request Table -->
+    <table class="request-table table table-striped">
+      <thead>
+          <tr>
+          <th>Proctor</th>
+          <th>Role</th>
+          <th>Non Available Dates</th>
+          </tr>
+      </thead>
+      <tbody>
+          <tr th:each="proctor: ${requests}"
+          th:if="${proctor.username} == ${user.username}">
+            
+              <td th:text="${proctor.username}"></td>
+              <td th:text="${proctor.role}"></td>
+          </tr>
+      </tbody>
+      </table>
+  </div>
+</body>
+</html>
 
   <!-- Bootstrap JavaScript -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
