--- a/gp/src/main/resources/templates/users/admin/adminUsers.html
+++ b/gp/src/main/resources/templates/users/admin/adminUsers.html
@@ -48,11 +48,12 @@
           <td th:text="${user.userType}"></td>
           <td th:text="${user.email}"></td>
           <td>
-            <form th:if="${user.username != null and user.username != ''}" action="/admin/removeUser" method="post">
+            <!-- <form th:if="${user.username != null and user.username != ''}" action="/admin/removeUser" method="post">
               <input type="hidden" name="username" th:value="${user.username}">
               <input type="radio" class="btn-check" name="options-outlined" id="danger-outlined" autocomplete="off">
               <button class="Delete btn btn-danger" for="danger">Remove User</button>
-            </form>
+            </form> -->
+            <a th:href="@{/admin/removeUser/{uid}(uid=${user.uid})}" class="btn btn-danger">Remove User</a>
           </td>
         </tr>
       </tbody>
