change email body properties from application/json to text/plain so that the body shows up correctly in the email

--- a/gp/src/main/resources/templates/users/admin/admin.html
+++ b/gp/src/main/resources/templates/users/admin/admin.html
@@ -163,12 +163,12 @@
 
     <script>
       function sendEmail() {
-        var emailAddress = 'boget91653@naymedia.com';
+        var emailAddress = 'bobbyc@vintomaper.com';
 
         var emailData = {
           to: emailAddress,
           subject: 'TEST from Spring App',
-          body: 'TEST from Spring App',
+          body: 'THIS IS THE BODY',
         };
 
         fetch('/sendEmail', {
