--- a/gp/src/main/resources/templates/users/admin/admin.html
+++ b/gp/src/main/resources/templates/users/admin/admin.html
@@ -157,13 +157,14 @@
     </div>
 
     <button id="sendEmailButton" class="btn btn-primary">Send Email</button>
+    <div id="userEmail" th:attr="data-user-email=${user.email}" style="display: none;"></div>
 
     <!-- Bootstrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <script>
       function sendEmail() {
-        var emailAddress = 'bobbyc@vintomaper.com';
+        var emailAddress = document.getElementById('userEmail').getAttribute('data-user-email');
 
         var emailData = {
           to: emailAddress,
