Added All Proctor Requests button to admin dashboard

--- a/gp/src/main/resources/templates/users/admin/admin.html
+++ b/gp/src/main/resources/templates/users/admin/admin.html
@@ -68,6 +68,7 @@
         <ul>
           <li><a href="/admin/users">Manage Users</a></li>
           <li><a href="/admin/exams">Manage Exam Requests</a></li> 
+          <li><a href="/admin/proctors">All Proctor Requests</a></li> 
         </ul>
       </nav>
       <h2>Admin Dashboard</h2>
