--- a/gp/src/main/resources/templates/users/admin/admin.html
+++ b/gp/src/main/resources/templates/users/admin/admin.html
@@ -157,18 +157,24 @@
     </div>
 
     <button id="sendEmailButton" class="btn btn-primary">Send Email</button>
+
+    <!-- dynamic info for email -->
     <div id="userEmail" th:attr="data-user-email=${user.email}" style="display: none;"></div>
+    <div id="userName" th:attr="data-user-name=${user.username}" style="display: none;"></div>
 
     <!-- Bootstrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <script>
       function sendEmail() {
-        var emailAddress = document.getElementById('userEmail').getAttribute('data-user-email');
+        let emailAddress = document.getElementById('userEmail').getAttribute('data-user-email');
 
-        var emailData = {
+        let subject = 'Finalized Exam Schedule for ' + document.getElementById('userName').getAttribute('data-user-name');
+        console.log("adsf", subject);
+
+        let emailData = {
           to: emailAddress,
-          subject: 'TEST from Spring App',
+          subject: subject,
           body: 'THIS IS THE BODY',
         };
 
