Added Finalized Exams tab to proctor dashboard

--- a/gp/src/main/resources/templates/users/admin/proctors.html
+++ b/gp/src/main/resources/templates/users/admin/proctors.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
 
-        <h1 style="text-align: center; margin: 20px;">Exam Requests</h1>
+        <h1 style="text-align: center; margin: 20px;">Proctor Requests</h1>
 
         <div class="btn-toolbar">
             <form action="/admin/dashboard" method="get">
