--- a/gp/src/main/resources/templates/users/proctor/proctor.html
+++ b/gp/src/main/resources/templates/users/proctor/proctor.html
@@ -133,6 +133,7 @@
       <ul>
         <!-- Add relevant links for proctor dashboard -->
         <li><a href="/proctor/pending-exams">Pending Assignments</a></li>
+        <li><a href="/proctor/finalDates">Finalized Exams</a></li>
       </ul>
     </nav>
 
