Fixed Finalized Exams for Instructor

--- a/gp/src/main/resources/templates/users/teacher/teacher.html
+++ b/gp/src/main/resources/templates/users/teacher/teacher.html
@@ -117,8 +117,16 @@
 
       <h2>Teacher Dashboard</h2>
 
+      <nav>
+        <ul>
+          <!-- Add relevant links for proctor dashboard -->
+          <li><a href="/teacher/finalDates">Finalized Exams</a></li>
+        </ul>
+      </nav>
+
       <!-- Request Form -->
       <form class="request-form" action="/instructor/create" method="post">
+        
         <!-- Duration and Section fields -->
         <div class="row">
           <div class="col-md-4">
